this is learning commit

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                
             <p>Web Developer | Designer | Creative Professional</p>
         </div>
+        <div>
+            <h1>lund lele mera</h1>
+        </div>
     </header>
 
     <nav>
