adding the image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <header>
         <div class="container">
-            <h1>Deepak Suthar <img src="images.png" height="100" width="100"></h1>
+            <div class="dpk-div">
+                <h1 class="dpk">Deepak Suthar </h1>
+                
+                <img src="./images.png" height="100" width="100"></div>
                
             <p>Web Developer | Designer | Creative Professional</p>
         </div>
