--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             </div>
             <div class="project">
                 <h3>E-Commerce Platform</h3>
-                <p>Developed a full-stack e-commerce platform with a focus on performance and usability.</p>
+                <p>Developed a full-stack e-commerce platform for saroj-enterprises with a focus on performance and usability.</p>
+                <p>https://saroj-enterprises.netlify.app/</p>
             </div>
             <!-- Add more projects as needed -->
         </div>
